--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
             <h2>Our Mission</h2>
             <p>We aim to create a better world through collaboration and innovation.</p>
         </section>
+        <section>
+            <h2>Projects</h2>
+            <p>Here are some of our current initiatives:</p>
+            <ul>
+                <li>Community Garden Development</li>
+                <li>Youth Mentorship Program</li>
+                <li>Sustainable Technology Workshop</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Join Us</h2>
+            <p>Becoming a member is easy! We welcome anyone who shares our vision for a better future.</p>
+            <p>To join, simply attend one of our monthly meetings or contact us through the information below.</p>
+        </section>
+        <section>
+            <h2>Contact</h2>
+            <p>Email: info@newsociety.org</p>
+            <p>Phone: (555) 123-4567</p>
+            <p>Address: 123 Innovation Street, Future City, FC 12345</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 New Society. All rights reserved.</p>
